# jmeter-xml-generator

./: .gitignore  Cargo.toml  README.md
doc/: .gitignore  book.toml
doc/script/: gen_report.ps1  retain_create_run.ps1  smart-hub-2.jmx
doc/script/args/: all_bu_code.csv  all_eic_id_gpn_bu_code.csv  all_staff_id_gpn_bu_code.csv  budget_create_arg.csv  login_staff_gpn_email_arg.csv  retain_create_engage_id_type_arg.csv  retain_create_staff_id_arg.csv
doc/src/: 00-1.0-state.md  00-login.md  01-budget.md  02-staffing.md  03-retain.md  CONCEPT.md  INTRODUCTION.md  REFERENCE.md  SUMMARY.md  Smart Hub 1.0 使用情况报告.md
examples/: login_and_request.rs
preview/example-with-vue2/: README.md  package.json  vue.config.js
preview/example-with-vue2/server/: index.js
preview/example-with-vue2/src/: App.vue  main.js
preview/example-with-vue2/src/components/: HelloWorld.vue
src/: lib.rs  main.rs  script.rs
src/axios_config/: mod.rs  test.rs
src/builder/: mod.rs  test.rs
src/elements/: assertions.rs  base.rs  config.rs  http.rs  listeners.rs  logic_controller.rs  mod.rs  plan.rs  post_processors.rs  pre_processors.rs  request.rs  test.rs  threads.rs  timer.rs
src/generator/: mod.rs  test.rs
src/kit/: mod.rs
src/request/: mod.rs  test.rs
src/script/: mod.rs
src/utils/: mod.rs
src/xml/: mod.rs
