[package]
name = "jmeter-xml-generator"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/Ahuang0107/jmeter-xml-generator"
homepage = "https://github.com/Ahuang0107/jmeter-xml-generator"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
wasm-bindgen = "0.2.83"
url = "2.3.1"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }
log = "0.4.6"
wasm-logger = "0.2.0"
